# ADZ-OS

./: .gitignore  README.md
chainmesh/: Cargo.toml
chainmesh/src/: lib.rs
chainmesh/src/consensus/: epoch.rs  mod.rs  mu_pos.rs  reward.rs  validator.rs
chainmesh/src/contracts/: collection.rs  game_license.rs  marketplace.rs  mod.rs  nft.rs  royalty.rs
chainmesh/src/node/: chain.rs  config.rs  mempool.rs  mod.rs  rpc.rs
chainmesh/src/p2p/: discovery.rs  gossip.rs  message.rs  mod.rs  peer.rs  scoring.rs  sync.rs
chainmesh/src/storage/: cache.rs  kv.rs  mod.rs  snapshot.rs  state.rs  trie.rs
chainmesh/src/types/: account.rs  address.rs  block.rs  mod.rs  token.rs  transaction.rs
docs/: ARCHITECTURE.md  MATH.md  SECURITY.md  SPEC.md
kernel/: Cargo.toml  README.md  linker.ld
kernel/.cargo/: config.toml
kernel/src/: lib.rs
kernel/src/boot/: mod.rs
kernel/src/caps/: mod.rs
kernel/src/drivers/: interrupts.rs  mod.rs  serial.rs  timer.rs
kernel/src/ipc/: mod.rs
kernel/src/mm/: frame.rs  heap.rs  mod.rs  page.rs  virt.rs
kernel/src/sys/: mod.rs  process.rs  scheduler.rs  syscall.rs  thread.rs
libmu-crypto/: Cargo.toml
libmu-crypto/benches/: crypto_bench.rs
libmu-crypto/src/: cipher.rs  hash.rs  kdf.rs  lib.rs  primitives.rs  random.rs  signature.rs
libmu-crypto/tests/: integration_tests.rs
muonnet/: Cargo.toml  README.md
muonnet/src/: cell.rs  circuit.rs  client.rs  config.rs  directory.rs  error.rs  hidden.rs  lib.rs  relay.rs  stream.rs
muonnet/src/crypto/: handshake.rs  keys.rs  mod.rs  onion.rs
