[package]
name = "muonnet"
version = "0.1.0"
edition = "2021"
authors = ["Quigles1337 <adz@alphx.io>"]
description = "MuonNet: Privacy networking layer for μOS with onion routing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Quigles1337/ADZ-OS"
keywords = ["privacy", "onion-routing", "tor", "networking", "crypto"]
categories = ["network-programming", "cryptography"]

[dependencies]
# μOS cryptography
libmu-crypto = { path = "../libmu-crypto" }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Networking
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
serde_with = { version = "3.0", features = ["hex"] }

# Error handling
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
parking_lot = "0.12"
rand = "0.8"
hex = "0.4"
base32 = "0.5"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
humantime-serde = "1.1"

# CLI (for daemon)
clap = { version = "4.0", features = ["derive"] }

# IP address handling
ipnet = "2.9"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"

[[bin]]
name = "muond"
path = "src/bin/muond.rs"

[[bin]]
name = "muon"
path = "src/bin/muon.rs"
